# waseda-moodle-checker

./: Cargo.toml  LICENSE  README.md
src/: error.rs  login.rs  main.rs
