[package]
name = "waseda-moodle-checker"
version = "0.2.0"
authors = ["mkihr-ojisan"]
edition = "2018"
license = "MIT"
description = "Checks if there are any updates in Waseda Moodle"
repository = "https://github.com/mkihr-ojisan/waseda-moodle-checker"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
waseda-moodle = "0.1.2"
clap = "2.33.0"
failure = "0.1.8"
dirs = "2.0.2"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
tokio = { version = "0.2.20", features = ["macros"] }
reqwest = "0.10.4"
html-extractor = "0.4.0"
scraper = "0.12.0"
regex = "1.3.7"

[profile.release]
lto = true
